tests/NormalTests/paczka1/small_fuzzy/84409861.err
Error in line 4: A385 A804 96,6
Error in line 3: xhzrtxfhYe A804 78,2
